# ActionsTests

./: README.md  run_local.bash
.github/workflows/: CI.yml
src/: CMakeLists.txt  main.cpp
tests/: test.exr
